improved Mentor Groups gradebook component