@@ -1,14 +1,14 @@
 package com.garretwilson.rdf.xmlschema;
 
-import com.garretwilson.lang.ObjectUtilities;
+import static com.garretwilson.lang.ObjectUtilities.*;
 import com.garretwilson.rdf.*;
-import com.garretwilson.text.xml.schema.XMLSchemaConstants;
+import static com.garretwilson.text.xml.schema.XMLSchemaConstants.*;
 
 /**An RDF literal that represents an XML Schema integer.
 @author Garret Wilson
 @see Integer
 */
-public class IntegerLiteral extends RDFTypedLiteral implements XMLSchemaConstants
+public class IntegerLiteral extends NumberLiteral
 {
 
 	/**Returns the literal value that the lexical form represents.
@@ -23,7 +23,7 @@ public class IntegerLiteral extends RDFTypedLiteral implements XMLSchemaConstant
 	*/
 	public IntegerLiteral(final int value)
 	{
-		this(new Integer(value));	//create a new Integer object and construct the class with it
+		this(Integer.valueOf(value));	//create a new Integer object and construct the class with it
 	}
 
 	/**Constructs an integer literal using the datatype
@@ -51,14 +51,14 @@ public class IntegerLiteral extends RDFTypedLiteral implements XMLSchemaConstant
 	*/
 	public static IntegerLiteral asIntegerLiteral(final RDFObject rdfObject)
 	{
-		return (IntegerLiteral)ObjectUtilities.asInstance(rdfObject, IntegerLiteral.class);	//cast the object to an integer literal if we can
+		return asInstance(rdfObject, IntegerLiteral.class);	//cast the object to an integer literal if we can
 	}
 
 	/**Determines if the RDF object is an integer literal and, if so, casts the 
 		object to an integer literal and returns its value; otherwise, returns
 		-1.
 	@param rdfObject The RDF object in question.
-	@return The boolean value of the integer literal, or -1 if
+	@return The integer value of the integer literal, or -1 if
 		the object is not an integer literal or the object is <code>null</code>.
 	*/
 	public static int asIntValue(final RDFObject rdfObject)
